--- a/ios/StreamMobile/Info.plist
+++ b/ios/StreamMobile/Info.plist
@@ -35,8 +35,10 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>CAMERA PERMISSION DESCRIPTION</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>AUDIO PERMISSION DESCRIPTION</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
