--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "0.70.1",
+    "react-native-paper": "^4.12.5",
+    "react-native-rtmp-publisher": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
